--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/ux-turbo": "^2.22",
         "symfony/validator": "7.2.*",
         "symfony/web-link": "7.2.*",
+        "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -104,6 +105,7 @@
         "symfony/maker-bundle": "^1.61",
         "symfony/phpunit-bridge": "^7.2",
         "symfony/stopwatch": "7.2.*",
+        "symfony/var-dumper": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*"
     }
 }
