--- a/fixtures/fixtures.yaml
+++ b/fixtures/fixtures.yaml
@@ -23,6 +23,8 @@ App\Entity\Restaurant:
     horaires: []
     owner: "@user_<numberBetween(1, 100)>"
     isActive: <boolean()>
+    shortSummary: "<text(200)>"
+    longSummary: "<text(1000)>"
 
 App\Entity\Table:
   table_{1..100}:
@@ -39,10 +41,11 @@ App\Entity\Reservation:
     restaurant: "@restaurant_<numberBetween(1, 18)>"
     date: <dateTimeBetween('-1 year', '+1 day')>
     nbPersonne: <numberBetween(1, 6)>
-    commentary: "<boolean()> ? <text(200)> : null"
+    commentaire: "<boolean()> ? <text(200)> : null"
     isActive: <boolean()>
     user: "@user_<numberBetween(1, 100)>"
     tables: "<numberBetween(1, 3)>x @table_<numberBetween(1, 100)>"
+    plan: "@plan_<numberBetween(1, 20)>"
 
 App\Entity\Menu:
   menu_{1..50}:
